--- a/web-bootstrap/src/main/web/views/Project.html
+++ b/web-bootstrap/src/main/web/views/Project.html
@@ -1,2 +1,4 @@
-<ng-include src="'views/Api.html'"></ng-include>
-<ng-include src="'views/ApiAccordion.html'"></ng-include>
+<div class="row-fluid">
+    <ng-include src="'views/Api.html'"></ng-include>
+    <ng-include src="'views/ApiGroup.html'"></ng-include>
+</div>
