--- a/web-bootstrap/src/main/web/views/ApiGroup.html
+++ b/web-bootstrap/src/main/web/views/ApiGroup.html
@@ -8,7 +8,7 @@
           && operationGroup.methods.indexOf('GET') >= 0">
               <span class="card-method {{method}}" title="{{method}}"></span>
           </div-->
-          <a href="{{currentProject}}/{{currentVersion}}/api{{path}}">{{path}}</a>
+          <a href="{{currentProject}}/{{currentVersion}}/apiGroup{{path}}">{{path}}</a>
         </li>
       </ul>
     </accordion-group>
